--- a/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
@@ -6,7 +6,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    gap: var(--lb-spacing-2x-small);
+    gap: var(--lb-spacing-2xs);
     user-select: none;
 
     .icon {
