--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -4,7 +4,7 @@
   }
 
   section {
-    padding-block: var(--lb-spacing-medium);
+    padding-block: var(--lb-spacing-md);
   }
 
   section:first-child {
@@ -17,7 +17,7 @@
 
   .label {
     color: var(--lb-color-base-800);
-    margin-bottom: var(--lb-spacing-small);
+    margin-bottom: var(--lb-spacing-sm);
     font-weight: 500;
   }
 
