--- a/app/components/lookbook/ui/app/system_page/system_page.css
+++ b/app/components/lookbook/ui/app/system_page/system_page.css
@@ -1,5 +1,5 @@
 [data-component="system-page"] {
-  padding: var(--lb-spacing-large);
+  padding: var(--lb-spacing-lg);
   height: 100%;
   width: 100%;
   display: flex;
