--- a/app/components/lookbook/ui/elements/button/button.css
+++ b/app/components/lookbook/ui/elements/button/button.css
@@ -4,7 +4,7 @@
   line-height: 0;
   color: var(--lb-button-color);
 
-  .button-icon {
+  .icon {
     width: 100%;
     height: 100%;
   }
@@ -20,7 +20,7 @@
 
   &[data-size="md"] {
     padding: 0.75rem;
-    height: 2.5rem;
-    width: 2.5rem;
+    height: var(--lb-size-3xl);
+    width: var(--lb-size-3xl);
   }
 }
