--- a/app/components/lookbook/ui/app/header/header.html.erb
+++ b/app/components/lookbook/ui/app/header/header.html.erb
@@ -12,9 +12,8 @@
       <%= config.project_name %>
     </div>
   </a>
-  
-  
-  <% if config.theme_switcher %>
+    
+  <% if config.ui_color_scheme_switcher %>
     <div class="header-color-scheme-switcher">
       <%= render Lookbook::UI::ColorSchemeSwitcher.new %>
     </div>  
