--- a/app/components/lookbook/ui/elements/button_group/button_group.css
+++ b/app/components/lookbook/ui/elements/button_group/button_group.css
@@ -6,7 +6,7 @@
   .button-group-divider {
     flex: none;
     width: 1px;
-    background-color: var(--lb-button-group-divider-color);
+    background-color: var(--lb-divider-color);
     height: 38px;
     display: block;
   }
