--- a/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
+++ b/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
@@ -57,6 +57,12 @@
     }
   }
 
+  .nav-item-item:hover {
+    .nav-item-label {
+      color: var(--lb-nav-item-label-color-hover);
+    }
+  }
+
   &[aria-selected="true"] {
     > .nav-item-item {
       background-color: var(--lb-nav-item-background-color-selected);
