--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,5 @@
 @import "_tokens.css";
+@import "_themes.css";
 @import "_fonts.css";
 @import "_reset.css";
 
@@ -6,7 +7,7 @@ html,
 body {
   font-family: var(--lb-font-ui);
   font-size: var(--lb-font-size-md);
-  color: var(--lb-app-color);
+  color: var(--lb-body-color);
 }
 
 body {
@@ -55,7 +56,7 @@ tr:not(:last-child) {
 :focus-visible {
   outline: 1px solid transparent;
   outline-offset: 0;
-  outline-color: var(--lb-app-outline-color-focus);
+  outline-color: var(--lb-focus-outline-color);
 }
 
 /* Utilities */
