--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -140,6 +140,18 @@
   --lb-color-pink-900: #831843;
   --lb-color-pink-950: #500724;
 
+  --lb-color-fuscia-50: #fdf4ff;
+  --lb-color-fuscia-100: #fae8ff;
+  --lb-color-fuscia-200: #f5d0fe;
+  --lb-color-fuscia-300: #f0abfc;
+  --lb-color-fuscia-400: #e879f9;
+  --lb-color-fuscia-500: #d946ef;
+  --lb-color-fuscia-600: #c026d3;
+  --lb-color-fuscia-700: #a21caf;
+  --lb-color-fuscia-800: #86198f;
+  --lb-color-fuscia-900: #701a75;
+  --lb-color-fuscia-950: #4a044e;
+
   --lb-color-positive-50: var(--lb-color-green-50);
   --lb-color-positive-100: var(--lb-color-green-100);
   --lb-color-positive-200: var(--lb-color-green-200);
@@ -254,7 +266,83 @@
 
   /* Panels */
 
-  --lb-panel-padding: var(--lb-spacing-3xl);
+  --lb-panel-padding: var(--lb-spacing-md);
+}
+:root,
+:root[data-theme="indigo"] {
+  --lb-color-accent-50: var(--lb-color-indigo-50);
+  --lb-color-accent-100: var(--lb-color-indigo-100);
+  --lb-color-accent-200: var(--lb-color-indigo-200);
+  --lb-color-accent-300: var(--lb-color-indigo-300);
+  --lb-color-accent-400: var(--lb-color-indigo-400);
+  --lb-color-accent-500: var(--lb-color-indigo-500);
+  --lb-color-accent-600: var(--lb-color-indigo-600);
+  --lb-color-accent-700: var(--lb-color-indigo-700);
+  --lb-color-accent-800: var(--lb-color-indigo-800);
+  --lb-color-accent-900: var(--lb-color-indigo-900);
+  --lb-color-accent-950: var(--lb-color-indigo-950);
+
+  --lb-color-base-50: var(--lb-color-slate-50);
+  --lb-color-base-100: var(--lb-color-slate-100);
+  --lb-color-base-200: var(--lb-color-slate-200);
+  --lb-color-base-300: var(--lb-color-slate-300);
+  --lb-color-base-400: var(--lb-color-slate-400);
+  --lb-color-base-500: var(--lb-color-slate-500);
+  --lb-color-base-600: var(--lb-color-slate-600);
+  --lb-color-base-700: var(--lb-color-slate-700);
+  --lb-color-base-800: var(--lb-color-slate-800);
+  --lb-color-base-900: var(--lb-color-slate-900);
+  --lb-color-base-950: var(--lb-color-slate-950);
+}
+:root[data-theme="pink"] {
+  --lb-color-accent-50: var(--lb-color-pink-50);
+  --lb-color-accent-100: var(--lb-color-pink-100);
+  --lb-color-accent-200: var(--lb-color-pink-200);
+  --lb-color-accent-300: var(--lb-color-pink-300);
+  --lb-color-accent-400: var(--lb-color-pink-400);
+  --lb-color-accent-500: var(--lb-color-pink-500);
+  --lb-color-accent-600: var(--lb-color-pink-600);
+  --lb-color-accent-700: var(--lb-color-pink-700);
+  --lb-color-accent-800: var(--lb-color-pink-800);
+  --lb-color-accent-900: var(--lb-color-pink-900);
+  --lb-color-accent-950: var(--lb-color-pink-950);
+
+  --lb-color-base-50: var(--lb-color-gray-50);
+  --lb-color-base-100: var(--lb-color-gray-100);
+  --lb-color-base-200: var(--lb-color-gray-200);
+  --lb-color-base-300: var(--lb-color-gray-300);
+  --lb-color-base-400: var(--lb-color-gray-400);
+  --lb-color-base-500: var(--lb-color-gray-500);
+  --lb-color-base-600: var(--lb-color-gray-600);
+  --lb-color-base-700: var(--lb-color-gray-700);
+  --lb-color-base-800: var(--lb-color-gray-800);
+  --lb-color-base-900: var(--lb-color-gray-900);
+  --lb-color-base-950: var(--lb-color-gray-950);
+}
+:root[data-theme="fuscia"] {
+  --lb-color-accent-50: var(--lb-color-fuscia-50);
+  --lb-color-accent-100: var(--lb-color-fuscia-100);
+  --lb-color-accent-200: var(--lb-color-fuscia-200);
+  --lb-color-accent-300: var(--lb-color-fuscia-300);
+  --lb-color-accent-400: var(--lb-color-fuscia-400);
+  --lb-color-accent-500: var(--lb-color-fuscia-500);
+  --lb-color-accent-600: var(--lb-color-fuscia-600);
+  --lb-color-accent-700: var(--lb-color-fuscia-700);
+  --lb-color-accent-800: var(--lb-color-fuscia-800);
+  --lb-color-accent-900: var(--lb-color-fuscia-900);
+  --lb-color-accent-950: var(--lb-color-fuscia-950);
+
+  --lb-color-base-50: var(--lb-color-gray-50);
+  --lb-color-base-100: var(--lb-color-gray-100);
+  --lb-color-base-200: var(--lb-color-gray-200);
+  --lb-color-base-300: var(--lb-color-gray-300);
+  --lb-color-base-400: var(--lb-color-gray-400);
+  --lb-color-base-500: var(--lb-color-gray-500);
+  --lb-color-base-600: var(--lb-color-gray-600);
+  --lb-color-base-700: var(--lb-color-gray-700);
+  --lb-color-base-800: var(--lb-color-gray-800);
+  --lb-color-base-900: var(--lb-color-gray-900);
+  --lb-color-base-950: var(--lb-color-gray-950);
 }
 @font-face {
   font-family: "Inter Var";
@@ -504,7 +592,7 @@ body {
   font-family: var(--lb-font-ui);
   font-size: 1rem;
   font-size: var(--lb-font-size-md);
-  color: var(--lb-app-color);
+  color: var(--lb-body-color);
 }
 body {
   min-height: 100vh;
@@ -554,7 +642,7 @@ tr:not(:last-child) {
 :focus-visible {
   outline: 1px solid transparent;
   outline-offset: 0;
-  outline-color: var(--lb-app-outline-color-focus);
+  outline-color: var(--lb-focus-outline-color);
 }
 /* Utilities */
 .bg-checked {
@@ -823,6 +911,7 @@ select {
       display: block;
     }
 [data-component="color-scheme-switcher"] .switcher-dropdown {
+    background-color: var(--lb-color-scheme-switcher-background-color);
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     padding-top: var(--lb-spacing-2xs);
@@ -830,6 +919,7 @@ select {
     min-width: 9em;
   }
 [data-component="color-scheme-switcher"] .switcher-option {
+    color: var(--lb-color-scheme-switcher-button-color);
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-top: var(--lb-spacing-xs);
@@ -846,11 +936,23 @@ select {
          column-gap: var(--lb-spacing-sm);
     width: 100%;
   }
+[data-component="color-scheme-switcher"] .switcher-option .icon {
+      color: var(--lb-color-scheme-switcher-icon-color);
+    }
+[data-component="color-scheme-switcher"] .switcher-option:hover {
+      color: var(--lb-color-scheme-switcher-button-color-hover);
+    }
+[data-component="color-scheme-switcher"] .switcher-option:hover .icon {
+        color: var(--lb-color-scheme-switcher-icon-color-hover);
+      }
 [data-component="color-scheme-switcher"] .switcher-option.selected {
       font-weight: 600;
       font-weight: var(--lb-font-weight-semibold);
-      color: var(--lb-color-accent-600);
+      color: var(--lb-color-scheme-switcher-button-color-selected);
     }
+[data-component="color-scheme-switcher"] .switcher-option.selected .icon {
+        color: var(--lb-color-scheme-switcher-icon-color-selected);
+      }
 [data-component="header"] {
   height: 2.5rem;
   height: var(--lb-size-3xl);
@@ -893,14 +995,8 @@ select {
 [data-component="layout"][data-status-bar="true"] {
     grid-template-rows: min-content 1fr min-content;
   }
-[data-component="layout"] #app-header {
-    border-bottom: 1px solid var(--lb-app-divider-color);
-  }
 [data-component="layout"] #app-body {
     height: 100%;
-  }
-[data-component="layout"] #app-status-bar {
-    border-top: 1px solid var(--lb-app-divider-color);
   }
 [data-component="router"] {
   display: contents;
@@ -916,6 +1012,7 @@ select {
   padding-right: var(--lb-spacing-sm);
   color: var(--lb-status-bar-color);
   background-color: var(--lb-status-bar-background-color);
+  border-top: 1px solid var(--lb-divider-color);
 
   display: flex;
   align-items: center;
@@ -929,10 +1026,10 @@ select {
     height: 100%;
   }
 [data-component="status-bar"] .status-bar-info {
-    color: var(--lb-color-base-500);
+    color: var(--lb-status-bar-color);
   }
 [data-component="status-bar"] .status-bar-action {
-    color: var(--lb-color-accent-700);
+    color: var(--lb-status-bar-action-color);
   }
 [data-component="status-bar-item"] {
   position: relative;
@@ -989,7 +1086,7 @@ select {
     padding-bottom: var(--lb-spacing-sm);
   }
 [data-component="status-bar-notifications"] .notification + .notification {
-      border-top: 1px solid var(--lb-app-divider-color);
+      border-top: 1px solid var(--lb-divider-color);
     }
 [data-component="status-bar-notifications"] .notification .notification-icon .icon {
         flex: none;
@@ -1155,7 +1252,7 @@ select {
 [data-component="button-group"] .button-group-divider {
     flex: none;
     width: 1px;
-    background-color: var(--lb-button-group-divider-color);
+    background-color: var(--lb-divider-color);
     height: 38px;
     display: block;
   }
@@ -1327,6 +1424,9 @@ select {
       width: 100%;
       text-align: left;
     }
+[data-component="nav-item"] .nav-item-item:hover .nav-item-label {
+      color: var(--lb-nav-item-label-color-hover);
+    }
 [data-component="nav-item"][aria-selected="true"] > .nav-item-item {
       background-color: var(--lb-nav-item-background-color-selected);
       border-left-color: var(--lb-nav-item-border-color-selected);
@@ -1383,7 +1483,7 @@ select {
     z-index: 100;
   }
 [data-component="pane-group"][data-orientation="horizontal"] > .pane-group-gutter {
-      border-bottom: 1px solid var(--lb-app-divider-color);
+      border-bottom: 1px solid var(--lb-divider-color);
       width: 100%;
       height: 1px;
     }
@@ -1396,7 +1496,7 @@ select {
         cursor: ns-resize;
       }
 [data-component="pane-group"][data-orientation="vertical"] > .pane-group-gutter {
-      border-right: 1px solid var(--lb-app-divider-color);
+      border-right: 1px solid var(--lb-divider-color);
       height: 100%;
       width: 1px;
     }
@@ -1672,7 +1772,7 @@ select {
   align-items: center;
   padding-left: 1rem;
   padding-left: var(--lb-spacing-md);
-  border-bottom: 1px solid var(--lb-app-divider-color);
+  border-bottom: 1px solid var(--lb-divider-color);
 }
 [data-component="toolbar"] .toolbar-section {
     display: flex;
@@ -1694,7 +1794,7 @@ select {
     align-items: center;
   }
 [data-component="toolbar"] [data-component="button-group"] + [data-component="button-group"] {
-      border-left: 1px solid var(--lb-app-divider-color);
+      border-left: 1px solid var(--lb-divider-color);
     }
 [data-component="toolbar-tab"] {
   color: var(--lb-tab-color);
@@ -1792,7 +1892,7 @@ select {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    outline: 1px solid var(--lb-app-divider-color);
+    outline: 1px solid var(--lb-divider-color);
   }
 .resize-x[data-component="viewport"] .viewport-dimensions {
       right: 1rem;
@@ -1820,13 +1920,13 @@ select {
   }
 [data-component="viewport"] .viewport-handle-x {
     flex-direction: row;
-    border-left: 1px solid var(--lb-app-divider-color);
+    border-left: 1px solid var(--lb-divider-color);
     width: 1rem;
     width: var(--lb-size-md);
     cursor: ew-resize;
   }
 [data-component="viewport"] .viewport-handle-y {
-    border-top: 1px solid var(--lb-app-divider-color);
+    border-top: 1px solid var(--lb-divider-color);
     height: 1rem;
     height: var(--lb-size-md);
     cursor: ns-resize;
@@ -1954,14 +2054,14 @@ select {
 [data-component="param-editor"] {
 }
 [data-component="preview-embed"] {
-  border: 1px solid var(--lb-app-divider-color);
+  border: 1px solid var(--lb-divider-color);
   border-radius: 4px;
   overflow: hidden;
 }
 [data-component="preview-embed"] .embed-preview {
   }
 [data-component="preview-embed"] .embed-drawer {
-    border-top: 1px solid var(--lb-app-divider-color);
+    border-top: 1px solid var(--lb-divider-color);
   }
 [data-component="preview-inspector"] {
   height: 100%;
