--- a/app/components/lookbook/ui/pages/page_browser/page_browser.css
+++ b/app/components/lookbook/ui/pages/page_browser/page_browser.css
@@ -1,6 +1,7 @@
 [data-component="page-browser"] {
   height: 100%;
   width: 100%;
+  background-color: var(--lb-page-background-color);
 
   iframe {
     height: 100%;
