--- a/app/components/lookbook/ui/elements/code/code.css
+++ b/app/components/lookbook/ui/elements/code/code.css
@@ -36,3 +36,12 @@
     white-space: pre-wrap;
   }
 }
+
+html[data-color-scheme="dark"] .shiki,
+html[data-color-scheme="dark"] .shiki span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
+}
