Render pages within Lookbook

--- a/app/components/lookbook/ui/pages/page/page.html.erb
+++ b/app/components/lookbook/ui/pages/page/page.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(:article, x: {data: "page", "@message.window": "handleMessage"}) do %>
+<%= render component_tag(:article) do %>
   <% if header? %>
     <div class="page-header-wrapper page-slat">
       <header class="page-header page-container">
