--- a/app/views/lookbook/pages/page.html.erb
+++ b/app/views/lookbook/pages/page.html.erb
@@ -1,3 +1,18 @@
-<%= lb_page(@page) do |page| %>
-  <%= @page_content %>
-<% end %>
+<%=
+  lb_pane(id: dom_id(@page)) do |pane|
+    pane.with_toolbar do |toolbar|
+      toolbar.with_breadcrumb(@config.pages_nav_label, @page.ancestors, @page)
+      toolbar.with_button_group do |group|
+        group.with_button(icon: :info, tooltip: "Page info") do |button|
+          button.with_dropdown do 
+            render Lookbook::UI::PageMetadata.new(page: @page)
+          end
+        end
+      end
+    end 
+    
+    lb_page(@page) do |page|
+      @page_content
+    end
+  end
+%>
