--- a/app/views/lookbook/inspector/preview.html.erb
+++ b/app/views/lookbook/inspector/preview.html.erb
@@ -1,11 +1,16 @@
 <% @target.scenarios_with_output do |scenario, html| %>
   <!-- lookbook:scenario:<%= scenario.uuid %> -->
   <% if @target.scenarios.many? %>
-    <section style="margin-bottom: 2rem;">
-      <header style="margin-bottom: 0.5rem;">
-        <span style="display: inline-block; margin-right: 0.3rem;"><%= scenario.label %></span>
-        <a style="font-size: 0.8rem;" href="<%= scenario.preview_path %>" target="_blank">[open in new window]</a>
-      </header>
+    <section style="margin-bottom: 2rem !important; display: block !important;">
+      <h6 style="all: unset; display: block; font-family: sans-serif; font-size: 0.8rem; margin-top: 0; margin-bottom: 0.7rem; color: currentColor">
+        <span style="all: unset; display: inline-block; margin-right: 0.3rem; color: currentColor"><%= scenario.label %></span>
+        <a style="all: unset; text-decoration: underline; cursor: pointer; opacity: 0.7;" href="<%= scenario.preview_path %>" target="_blank" title="Open in new window">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="unset: all;" >
+            <path d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6"/><path d="m21 3-9 9"/>
+            <path d="M15 3h6v6"/>
+          </svg>
+        </a>
+      </h6>
       <div>
         <%= html %>
       </div>
